<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.Renda" >

    <EditText
        android:id="@+id/etIDRendas"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etIDRenda"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <EditText
        android:id="@+id/etFonteRendas"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etFonteRenda"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        tools:hint="@string/etFonteRenda" />

    <EditText
        android:id="@+id/etValorRendas"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etValorRenda"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352"
        tools:textColorHint="@color/black" />

    <TextView
        android:id="@+id/tvRenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRenda"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/btnCadastrarRendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/btnExcluirRendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/btnConsultarRendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/btnAtualizarRendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <Button
        android:id="@+id/btnListarRendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/tvResRendas"
        android:layout_width="407dp"
        android:layout_height="183dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/cbInvestimento"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:text="@string/cbInvestimento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />
</androidx.constraintlayout.widget.ConstraintLayout>