<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentMercado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".comprasMercado">

    <EditText
        android:id="@+id/etDataMercado"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etDataMercado"
        android:inputType="date"
        android:textColorHint="#000000"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <EditText
        android:id="@+id/etValorMercado"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etValor"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <EditText
        android:id="@+id/etNomeMercado"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etNomeMercado"
        android:inputType="text"
        android:textColorHint="#000000"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/etIDCompraMercado"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etID"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <EditText
        android:id="@+id/etQuantidadeMercado"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etQuantidade"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/tvMercado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMercado"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />
    <Button
        android:id="@+id/btnCadastrarMercado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/cadastar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <Button
        android:id="@+id/btnListarMercado"
        android:layout_width="132dp"
        android:layout_height="48dp"

        android:text="@string/listar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <Button
        android:id="@+id/btnAtualizarMercado"
        android:layout_width="139dp"
        android:layout_height="49dp"

        android:text="@string/atualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/btnConsultarMercado"
        android:layout_width="137dp"
        android:layout_height="51dp"

        android:text="@string/consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <Button
        android:id="@+id/btnExcluirMercado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <TextView
        android:id="@+id/tvResMercado"
        android:layout_width="410dp"
        android:layout_height="209dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

</androidx.constraintlayout.widget.ConstraintLayout>